# CppRogueLike

./: .clang-format  .clang-uml  .clangd  .gitignore  .mcp.json  ANALYSIS_COMPLETE.md  C++RogueLike.data  C++RogueLike.html  C++RogueLike.js  C++RogueLike.sln  C++RogueLike.wasm  C++RougeLike.sln  CLAUDE.md  CMakeGuide.txt  CMakeLists.txt  CMakePresets.json  CREDITS.md  DEPRECATION_LOG.md  EmscriptenGuide.txt  GLOBAL_EXTERN_REMOVED.md  HEALER_CODE_REFERENCE.md  HEALER_DETAILED_REFERENCES.csv  HEALER_REFACTORING_SUMMARY.txt  README.md  README_ANALYSIS.md  REFACTORING_ANALYSIS_HEALER.md  REFACTOR_GAMECONTEXT_REQUIREMENTS.md  REFACTOR_ITEMFACTORY_ANALYSIS.md  REFACTOR_ITEMFACTORY_EXECUTIVE_SUMMARY.md  REFACTOR_ITEMFACTORY_FINDINGS.txt  REFACTOR_ITEMFACTORY_INDEX.md  REFACTOR_ITEMFACTORY_REFERENCE_GUIDE.md  REFACTOR_ITEMFACTORY_TRANSFORMATIONS.md  TextFile1.txt  compose_tileset.py  cpprl pre-release-x64.rar  debug_tiles.py  index.data  index.html  index.js  (+7 more)
.ai-tools/: .gitignore  OUROBOROS_DESIGN.md  OUROBOROS_README.md  README.md  ai_workflow.py  code_analyzer.py  config_extractor.py  ouroboros.py  ouroboros_config.json  ouroboros_presenter.py  ouroboros_scanner.py  ouroboros_surgeon.py  ouroboros_triage.py  ouroboros_validator.py  quick_test.py  test_generator.py
.claude/: settings.local.json
.github/workflows/: ai-improvements.yml  ci-tests.yml  web-build.yaml
C++RogueLike/: Actor.cpp  Actor.h  Ai.cpp  Ai.h  AiMonster.cpp  AiMonster.h  AiMonsterConfused.cpp  AiMonsterConfused.h  AiPlayer.cpp  AiPlayer.h  AiShopkeeper.cpp  Attacker.cpp  Attacker.h  BaseMenu.cpp  BaseMenu.h  C++RogueLike.vcxproj  C++RogueLike.vcxproj.filters  CalculatedTHAC0s.h  CharismaAttributes.h  ChatGPT.cpp  ChatGPT.h  Colors.cpp  Colors.h  Confuser.cpp  Confuser.h  ConstitutionAttributes.cpp  ConstitutionAttributes.h  Container.cpp  Container.h  Controls.h  Destructible.cpp  Destructible.h  Dijkstra.cpp  Dijkstra.h  Engine.cpp  Engine.h  Fireball.cpp  Game.cpp  Game.h  Goblin.cpp  (+55 more)
C++RogueLike/Actor/: Actor.cpp  Actor.h  Attacker.cpp  Attacker.h  Confuser.cpp  Confuser.h  Container.cpp  Container.h  Destructible.cpp  Destructible.h  Pickable.cpp  Pickable.h
C++RogueLike/ActorTypes/: Dagger.cpp  Dagger.h  Fireball.cpp  Fireball.h  Goblin.h  Gold.cpp  Gold.h  Healer.cpp  Healer.h  LightningBolt.cpp  LightningBolt.h  LongSword.cpp  LongSword.h  Monsters.cpp  Monsters.h  Player.cpp  Player.h
C++RogueLike/Ai/: Ai.cpp  Ai.h  AiMonster.cpp  AiMonster.h  AiMonsterConfused.cpp  AiMonsterConfused.h  AiPlayer.cpp  AiPlayer.h  AiShopkeeper.cpp  AiShopkeeper.h
C++RogueLike/Attributes/: CharismaAttributes.cpp  DexterityAttributes.cpp  DexterityAttributes.h  IntelligenceAttributes.cpp  StrengthAttributes.cpp  StrengthAttributes.h  WisdomAttributes.cpp
C++RogueLike/Colors/: Colors.cpp
C++RogueLike/Controls/: Controls.h
C++RogueLike/Gui/: Gui.cpp  Gui.h  LogMessage.h  Window.cpp
C++RogueLike/Map/: Map.cpp  Map.h
C++RogueLike/Menu/: Menu.cpp  Menu.h  MenuClass.cpp  MenuClass.h  MenuGender.cpp  MenuGender.h  MenuName.cpp  MenuRace.cpp  MenuRace.h
C++RogueLike/Persistent/: Persistent.h
C++RogueLike/dnd_tables/: CalculatedTHAC0s.h
C++RogueLike/include/: menu.cpp  menu.hpp  message_box.cpp  message_box.hpp  user_config.h
C++RogueLike/json/: constitution.json
C++RougeLike/: Actor.cpp  Actor.h  Ai.cpp  Ai.h  Attacker.cpp  Attacker.h  C++RougeLike.vcxproj  C++RougeLike.vcxproj.filters  Colors.cpp  Colors.h  Container.cpp  Destructible.cpp  Destructible.h  Engine.cpp  Engine.h  Gui.cpp  Gui.h  Map.cpp  Map.h  Pickable.cpp  Source1.cpp  Source2StackOverflow.cpp  Window.cpp  Window.h  main.h  main_C++RougeLike.cpp  main_C++RougeLike.h  mybsp.cpp  mybsp.h  mytree.cpp  mytree.h  random.cpp
C++RougeLike/src/: Makefile.mgw  obsolete.cpp  setsubsystem.cpp
DawnLike/Characters/: enum_tiles.py
DawnLike/Objects/: enum_tiles.py
Sample-Test1/: Sample-Test1.vcxproj  test.cpp
UT_PDCurses_draw/: UT_PDCurses_draw.vcxproj  UT_PDCurses_draw.vcxproj.filters  main_UT_PDCurses_draw.cpp
UT_PDCurses_input/: UT_PDCurses_input.vcxproj  UT_PDCurses_input.vcxproj.filters  main_UT_PDCurses_input.cpp  main_UT_PDCurses_input.h
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
cpprl-testgoogle/: cpprl-testgoogle.vcxproj  test.cpp
cpprl-testnative/: cpprl-testnative.cpp  cpprl-testnative.vcxproj  cpprl-testnative.vcxproj.filters
data/: decor_overrides.json  prefabs.json  tile_labels.json
data/content/: enhanced_rules.json  items.json  monsters.json  spells.json  tiles.json
data/tiles/: tile_config.json
diagrams/: ai_system.puml  combat_system.puml  creature_hierarchy.puml  menu_system.puml  systems_overview.puml
pdcurses/sdl2/: pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  sdltest.c
src/: AiMimic.cpp  AiMimic.h  AiMonsterRanged.cpp  AiMonsterRanged.h  AiSpider.cpp  AiSpider.h  Amulet.cpp  Amulet.h  Armor.cpp  Armor.h  C++RogueLike.vcxproj  CorpseFood.cpp  CorpseFood.h  Dijkstra.cpp  Dijkstra.h  Food.cpp  Food.h  Game.cpp  Game.h  Game.h.bak  HungerSystem.cpp  HungerSystem.h  IMenuState.h  ItemCreator.cpp  ItemCreator.h  ItemFactory.cpp  ItemFactory.h  Items.cpp  Items.h  MenuBuy.cpp  MenuSell.cpp  MenuTrade.cpp  MenuTrade.h  MonsterFactory.cpp  MonsterFactory.h  Spider.cpp  Spider.h  TargetingSystem.cpp  TargetingSystem.h  Vector2D.h  (+6 more)
src/Actor/: Actor.cpp  Actor.h  Item.cpp  (+25 more)
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/Actor/: CreatureSerializationTest.cpp  DestructibleEdgeCaseTest.cpp  DestructibleSerializationTest.cpp  DestructibleUnitTest.cpp  EquipmentStatBonusTest.cpp  ItemSerializationTest.cpp  PickableAcBonusTest.cpp  PlayerSerializationTest.cpp  PlayerVirtualInterfaceTest.cpp
tests/Ai/: AiMimicTest.cpp
tests/Combat/: AttackerTest.cpp  DamageInfoTest.cpp  WeaponDamageRegistryTest.cpp
tests/Factories/: ItemCreatorTest.cpp  MonsterCreatorTest.cpp
tests/Map/: MapTest.cpp  TreasureRoomTest.cpp
tests/Systems/: CurseSystemTest.cpp  EnhancementSystemTest.cpp  LevelUpSystemTest.cpp  ShopKeeperSerializationTest.cpp
tests/Utils/: UniqueIdTest.cpp  Vector2DTest.cpp
tests/mocks/: MockGameContext.h
(+307 files in other folders)
